--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/aakobordenau/smartdns#readme",
   "dependencies": {
+    "@types/node-cache": "^4.1.1",
     "dns-packet": "^4.2.0",
     "node-cache": "^4.2.0",
     "object-hash": "^1.3.0"
