--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "smartdns",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.js",
+  "main": "dist/app.js",
   "directories": {
     "test": "test"
   },
