--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/node-cache": "^4.1.1",
     "dns-packet": "^4.2.0",
     "node-cache": "^4.2.0",
-    "object-hash": "^1.3.0"
+    "object-hash": "^1.3.0",
+    "redis": "^2.8.0",
+    "sha256": "^0.2.0"
   }
 }
