--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/aakobordenau/smartdns#readme",
   "dependencies": {
     "@types/node-cache": "^4.1.1",
+    "@types/redis": "^2.8.6",
     "dns-packet": "^4.2.0",
     "node-cache": "^4.2.0",
     "object-hash": "^1.3.0",
