--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,12 @@
       "target": "es6",
       "module": "commonjs",
       "outDir": "dist",
-      "sourceMap": true
+      "sourceMap": true,
+      "removeComments": true,
+      "noUnusedLocals": false,
+      "noUnusedParameters": false,
+      "noImplicitReturns": true,
+      "noImplicitThis": true
     },
     "files": [
       "./src/app.ts"
