--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/aakobordenau/smartdns#readme",
   "dependencies": {
     "@types/node-cache": "^4.1.1",
+    "@types/node-schedule": "^1.2.2",
     "@types/redis": "^2.8.6",
     "dns-packet": "^4.2.0",
     "node-cache": "^4.2.0",
+    "node-schedule": "^1.3.0",
     "object-hash": "^1.3.0",
     "redis": "^2.8.0",
     "sha256": "^0.2.0"
